manifests/deployment.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-server
  template:
    metadata:
      labels:
        app: nginx-server
    spec:
      containers:
        - name: nginx-custom
          image: maabuibaid/nginx-custom:versionOne
          ports:
            - containerPort: 80
