manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx-server
spec:
  containers:
    - name: nginx-custom
      image: maabuibaid/nginx-custom:versionOne
      ports:
        - containerPort: 80
