manifests/np_service.yaml
apiVersion: v1
kind:  Service
metadata:
  name: nginx-service
spec:
  type: "NodePort"
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-server
